optionalView for view instance was not working correctly scrollbar visible for smart element toolbar

--- a/src/ui/less/layout/element-toolbar.less
+++ b/src/ui/less/layout/element-toolbar.less
@@ -48,6 +48,8 @@ fpd-element-toolbar {
             >.fpd-label {
                 margin-top: 5px;
                 display: inline-block;
+                line-height: 1;
+                vertical-align: bottom;
             }
 
             >.fpd-current-fill {
@@ -344,6 +346,9 @@ fpd-element-toolbar.fpd-smart {
 
 
     > .fpd-tools-nav {
+
+        margin-bottom: 5px;
+
 
         >div {
             margin: 20px 0;
